--- a/src/FFT.FileManagement/FFT.FileManagement.csproj
+++ b/src/FFT.FileManagement/FFT.FileManagement.csproj
@@ -10,7 +10,7 @@
     <Description>$(Summary)</Description>
     <Company>True Goodwill</Company>
     <Authors>True Goodwill</Authors>
-    <PackageProjectUrl>https://github.com/FastFinTech/FFT.FileManager</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/FastFinTech/FFT.FileManagement</PackageProjectUrl>
     <RepositoryUrl>$(PackageProjectUrl)</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>file;files</PackageTags>
@@ -18,16 +18,10 @@
 
   <ItemGroup>
     <PackageReference Include="ConfigureAwait.Fody" Version="3.3.1" PrivateAssets="All" />
-    <PackageReference Include="FFT.Disposables" Version="0.0.6" />
-    <PackageReference Include="FFT.TimeStamps" Version="0.0.18" />
-    <PackageReference Include="Fody" Version="6.3.0">
+    <PackageReference Include="Fody" Version="6.4.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
-    <PackageReference Include="Nito.AsyncEx" Version="5.1.0" />
-    <PackageReference Include="Nito.Disposables" Version="2.2.0" />
-    <PackageReference Include="System.IO.Pipelines" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
