--- a/src/FFT.FileManagement/FFT.FileManagement.csproj
+++ b/src/FFT.FileManagement/FFT.FileManagement.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <IsPackable>true</IsPackable>
-
     <PackageId>FFT.FileManagement</PackageId>
     <Summary>Manages application files relative to a particular directory.</Summary>
     <Description>$(Summary)</Description>
